--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,8 @@
 version : '3'
 services :
-  app :
+  app1 :
     build : .
     ports :
       - "5000:5000"
     volumes:
-      - .:/usr/src/app
+      - .:/usr/src/app1
